--- a/src/style/_utilities.scss
+++ b/src/style/_utilities.scss
@@ -10,6 +10,7 @@ $purple-00: #413543; // 테마색
 $green-00: #2e4f4f; // 테마색
 $red-00: #a80038; // 테마색(로고)
 $yellow-00: #cf7500; // 테마색(로고)
+$brown-00: #5c3d2e; // 테마색
 
 // 반응형 분기점
 $desktop: 768px;
